--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -18,10 +18,9 @@ footer {
     align-items: stretch;
   }
   .column {
-    width: 100%;
     display: flex;
     flex-direction: column;
-    padding: 0 2em;
+    padding: 0 1em;
     margin-bottom: 30px;
   }
   h3 {
@@ -31,7 +30,7 @@ footer {
     font-size: 1.4em;
     white-space: nowrap;
   }
-  ul {
+  .column ul {
     list-style: none;
     display: flex;
     flex-direction: column;
@@ -41,7 +40,7 @@ footer {
   li:not(:first-child) {
     margin-top: 0.8em;
   }
-  ul li a {
+  .column ul li a {
     color: #a7a7a7;
     text-decoration: none;
   }
@@ -49,7 +48,7 @@ footer {
     color: #2a8ded;
   }
   .about p {
-    text-align: justify;
+   
     line-height: 2;
     margin: 0;
   }
