--- a/src/components/Rightside/maincontent.css
+++ b/src/components/Rightside/maincontent.css
@@ -83,7 +83,7 @@ input,textarea{
 }
 input:focus,textarea:focus{
     background-color: white;
-    margin-bottom: 10px;
+
     margin-top: 30px;
     mix-blend-mode: normal;
     color: black;
@@ -161,6 +161,10 @@ mix-blend-mode: soft-light;
     -webkit-text-fill-color: #6f161600;
     font-size: 50px;
 
+}
+.error{
+    color: #9f0000;
+    margin-top: 3px;
 }
 @media only screen and (max-width:800px) {
 
