--- a/src/components/Testimonies/Testimonies.css
+++ b/src/components/Testimonies/Testimonies.css
@@ -1,9 +1,34 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&display=swap');
+.testimoniesmain .line{
+	border-bottom: 10px solid #b7b7b7;
+	width: 7%;
+	mix-blend-mode: exclusion;
+	position: relative;
+	left: 81px;
+	border-radius: 30px;
+	top: -4px;
+}
+.testimoniesmain h1{
 
-
+	text-align: center;
+	color: rgb(255, 255, 255);
+    mix-blend-mode:difference;
+	font-size: 60px;
+font-weight: 600;
+}
 .testimoniescontainer{
-
+	flex-wrap: wrap;
   margin: 6rem;
+  margin-top: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.testimoniescon{
+	width: 47%;
+	margin: 10px;
+	min-width: 500px;
+	margin-bottom: 40px;
 }
 .outerdiv
 {
@@ -162,7 +187,14 @@
 	}
 }
 @media only screen and (max-width: 600px)
-{
+{    .testimoniescon {
+	width: auto;
+margin: auto;
+  margin-bottom: auto;
+min-width: auto;
+margin-bottom: 40px;
+
+}
 	.div1 {
 		background-position-x: 10rem;
 	}
