--- a/src/components/Rightside/maincontent.css
+++ b/src/components/Rightside/maincontent.css
@@ -88,6 +88,44 @@ input:focus,textarea:focus{
     mix-blend-mode: normal;
     color: black;
 }
+.mymodal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  
+    border: 1px solid #ccc;
+    background: #fff;
+    overflow: auto;
+    border-radius: 4px;
+    outline: none;
+    padding: 20px;
+    opacity: 1;
+
+  }
+  
+  .myoverlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.75);
+    z-index: 5;
+  }
+  .ReactModal__Overlay {
+    opacity: 0;
+    transition: opacity 500ms ease-in-out;
+    z-index: 5;
+  }
+  
+  .ReactModal__Overlay--after-open {
+    opacity: 1;
+  }
+  
+  .ReactModal__Overlay--before-close {
+    opacity: 0;
+  }
 .bestdeal{
     font-weight: 700;
     text-align: left;
@@ -161,6 +199,16 @@ mix-blend-mode: soft-light;
     -webkit-text-fill-color: #6f161600;
     font-size: 50px;
 
+}
+.confirmationcontainer{
+z-index: 10;
+    position: absolute;
+    top:50%;
+    left: 25%;
+    width: 40%;
+    height: 350px;
+    padding: 2rem;
+    background-color: #000000;
 }
 .error{
     color: #9f0000;
