--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -22,6 +22,9 @@ footer {
     flex-direction: column;
     padding: 0 1em;
     margin-bottom: 30px;
+    margin: auto;
+    margin-top: auto;
+   margin-top: 0;
   }
   h3 {
     width: 100%;
@@ -91,6 +94,11 @@ footer {
   @media screen and (max-width: 850px) {
     .row.primary {
       grid-template-columns: 1fr;
+    }
+    .column {
+margin: 0%;
+margin-bottom: 20px;
+
     }
   
   }
