--- a/src/components/Admin/Admin.css
+++ b/src/components/Admin/Admin.css
@@ -1,3 +1,8 @@
+:root {
+  --surface-color: #fff;
+  --curve: 40;
+}
+
 .admincontainer{
 
     margin: 30px;
@@ -10,7 +15,19 @@ table {
     width: 100%;
     table-layout: fixed;
   }
-  
+  [contenteditable="true"].single-line {
+    white-space: nowrap;
+    width:200px;
+    overflow: hidden;
+} 
+[contenteditable="true"].single-line br {
+    display:none;
+
+}
+[contenteditable="true"].single-line * {
+    display:inline;
+    white-space:nowrap;
+}
   table caption {
     font-size: 1.5em;
     margin: .5em 0 .75em;
@@ -34,7 +51,128 @@ table {
     letter-spacing: .1em;
     text-transform: uppercase;
   }
+  .cards {
+    display: grid;
+ 
+    gap: 2rem;
+    margin: 4rem 5vw;
+    padding: 0;
+    list-style-type: none;
+    background-color:transparent;
+    border-radius: 28px;
+  }
   
+  .card {
+    position: relative;
+    display: block;
+    height: 100%;  
+    border-radius: calc(var(--curve) * 1px);
+    overflow: hidden;
+    text-decoration: none;
+  }
+  
+ .admincontainer input{
+  
+  background-color: white;
+  border:1px solid grey;
+  padding: 1rem;
+  margin-bottom: 10px;
+  margin-top: 0;
+ }
+ .admincontainer input:focus{
+  color: black;
+ }
+ .admincontainer button{
+  width: 190px;
+  padding: 1rem;
+ }
+  .card__overlay {
+
+    z-index: 1;      
+    border-radius: calc(var(--curve) * 1px);    
+    background-color: var(--surface-color);      
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    transition: .2s ease-in-out;
+    padding-bottom: 2rem;
+    
+  }
+  
+
+  
+  .card__header {
+    position: relative;
+    display: flex;
+    align-items: center;
+    gap: 2em;
+    padding: 2em;
+    border-radius: calc(var(--curve) * 1px) 0 0 0;    
+    background-color: var(--surface-color);
+
+    transition: .2s ease-in-out;
+  }
+  
+ .card__overlay .datainput{
+
+  mix-blend-mode: normal;
+  margin: 0rem 0rem 00rem 2rem;
+  padding: 1rem;
+  border: 1px solid black;
+  width: 200px;
+  background-color: black;border-radius: 15px;
+  color: white;
+ }
+ .card__overlay button{
+
+  mix-blend-mode: normal;
+  margin: 0.5rem 0rem 0rem 2rem;
+  border-radius: 15px;
+ }
+ 
+
+
+  .card__title {
+    font-size: 26px;
+    margin: 0 0 0.1em;
+    color: #6A515E;
+    font-weight: 700;
+  }
+  .emailid{
+    font-size: 16px;
+    font-weight: 600;
+    margin-bottom: 19px;
+  }
+
+ .phonenumber{
+  margin-top: 5px;
+  font-size: 15px;
+  background-color: #fff;
+  width: -moz-fit-content;
+  width: fit-content;
+  color: #6a515e;
+  padding-left: 0;
+  padding-right: 10px;
+  border-radius: 20px;
+  padding-top: -10px;
+  padding-bottom: -12px;
+  font-weight: 600;
+ }
+
+  .card__status {
+    font-size: .8em;
+    color: #000000;
+  }
+  
+  .card__description {
+    padding: 0 2em 2em 2rem;
+    margin: 0;
+    color: #005;
+    font-family: "MockFlowFont";   
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+    overflow: hidden;
+    font-size: 20px;
+  }    
   @media screen and (max-width: 600px) {
     table {
       border: 0;
