updated many things

--- a/src/components/Rightside/maincontent.css
+++ b/src/components/Rightside/maincontent.css
@@ -18,6 +18,85 @@
     z-index: 1;
 }
 
+
+
+
+/*top nav fixed*/
+.topfixednav{
+position: absolute;
+right: 0;
+top: 0;
+  display: flex;
+  margin: 1rem;
+  margin-right: 10rem;
+}
+
+.topfixednav .topnavitem{
+ padding: 1rem;
+ position: relative;
+ font-family: 'Poppins', sans-serif;
+ font-size: 20px;
+ transition: 0.2s all;
+ margin: 0;
+  }
+  .topfixednav .topnavitem:hover{
+ 
+   cursor: pointer;
+
+     }
+.topnavitem:hover .topcnachoverdesc{
+  display: flex;
+
+}
+  .topnavitem .topcnachoverdesc{
+    margin: 1rem;
+    margin-top: 30px;
+    background-color: #e6e6e6d1;
+    width:550px;
+    height: 350px;
+    position: absolute;
+    top:20px;
+    right: 0;
+    display: none;
+    border-radius: 30px;
+    z-index: 5;
+    overflow: hidden;
+     }
+   .topcnachoverdesc .items{
+    font-family: 'Poppins', sans-serif;
+    padding: 1rem;
+    color: black;
+    font-size: 15px;
+
+   }
+   .topcnachoverdesc .items a{
+ 
+    color: black;
+  
+
+   }
+     .topnavitem .topcnachoverdesc .pic{
+
+    height: inherit;
+    width: 50%;
+    background-color: #9c9c9c;
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .navbar{
   position: fixed;
   top:0;
@@ -60,6 +139,66 @@ margin: auto;
  margin-bottom: 5px;
  font-size: 20px;
  font-weight: 700;
+
+}
+
+ input[type=checkbox]:checked ~ .maobilenavmain {
+  display: block
+}
+label{
+
+  position: relative;
+}
+input[type=checkbox]:checked ~ label:before {
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+
+  
+}
+input[type=checkbox]:checked ~ label {
+  margin-top: 1rem;
+}
+input[type=checkbox]:checked ~ .maobilenavmain {
+  margin: 1rem;
+}
+
+label:before {
+  content: ' ';
+  height: 0;
+  position: absolute;
+  width: 0;
+  right: -22px;
+  border: solid white;
+    border-top-width: medium;
+    border-right-width: medium;
+    border-bottom-width: medium;
+    border-left-width: medium;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+  transform: rotate(135deg);
+  top: 9px;
+}
+input[type=checkbox]{
+  margin: 0px;
+  padding: 0px;
+ display: none;
+}
+.maobilenavmain{
+
+  display: none;
+}
+.navitem_subsection{
+  color: white;
+  font-size: 18px;
+  font-weight: 700;
+  margin: 0.5rem;
+  
+
+}
+.navitem_subsection a:link, a:visited , a:active{
+  color: white;
+
 }
 .navbarAlign .close {
   position: relative;
@@ -258,7 +397,10 @@ z-index: 10;
 }
 
 @media only screen and (max-width:800px) {
+  .topnavitem{
 
+    display: none;
+  }
     .logo_container{
         margin-right: auto;
         width: 376px;
