--- a/src/components/Rightside/maincontent.css
+++ b/src/components/Rightside/maincontent.css
@@ -1,21 +1,14 @@
 .poster{
    
-    background: url('');
-    background: linear-gradient(to bottom, rgba(120, 120, 120, 0.9) 0.1%, rgb(0, 0, 0,0)), url(../imgs/handshake2.png);
-    background-size: cover;
-    height: 567px;
-    background-color: transparent;
-    background-blend-mode: screen;
-    background-position: center;
-    position: relative;
-    transition: 1s ease;
-    grid-column-gap: 64px;
-    align-items: center;
-    display: grid;
-    grid-template-areas: "body media";
-    grid-template-columns: 1fr 1fr;
-    animation: loop1 11s infinite ease-in-out;
-    z-index: 1;
+  position: relative;
+  transition: 1s ease;
+  grid-column-gap: 64px;
+  align-items: center;
+  display: grid;
+  grid-template-areas: "body media";
+  grid-template-columns: 1fr 1fr;
+  animation: loop1 11s infinite ease-in-out;
+  z-index: 1;
 }
 
 
@@ -26,83 +19,83 @@
 position: absolute;
 right: 0;
 top: 0;
-  display: flex;
-  margin: 1rem;
-  margin-right: 10rem;
+display: flex;
+margin: 1rem;
+margin-right: 10rem;
 }
 .topnavitem a:hover{
 color: black;
 }
 .topfixednav .topnavitem{
- padding: 1rem;
- position: relative;
- font-family: 'Poppins', sans-serif;
- font-size: 20px;
- transition: 0.2s all;
- margin: 0;
-  }
-  .topfixednav .topnavitem:hover{
- 
-   cursor: pointer;
+padding: 1rem;
+position: relative;
+font-family: 'Poppins', sans-serif;
+font-size: 20px;
+transition: 0.2s all;
+margin: 0;
+}
+.topfixednav .topnavitem:hover{
 
-     }
+ cursor: pointer;
+
+   }
 .topnavitem:hover .topcnachoverdesc{
-  display: flex;
+display: flex;
 
 }
-  .topnavitem .topcnachoverdesc{
-    margin: 1rem;
-    margin-top: 30px;
-    background-color: white;
-    width:550px;
-    height: 350px;
-    position: absolute;
-    top:20px;
-    right: 0;
-    display: none;
-    border-radius: 30px;
-    z-index: 5;
-    overflow: hidden;
-     }
-   .topcnachoverdesc .items{
-    font-family: 'Poppins', sans-serif;
-    padding: 1rem;
-    color: black;
-    font-size: 15px;
-    
-
+.topnavitem .topcnachoverdesc{
+  margin: 1rem;
+  margin-top: 30px;
+  background-color: white;
+  width:550px;
+  height: 350px;
+  position: absolute;
+  top:20px;
+  right: 0;
+  display: none;
+  border-radius: 30px;
+  z-index: 5;
+  overflow: hidden;
    }
-   .topcnachoverdesc .hrline{
-    border-bottom: 1px solid #bababa;
-    width: 44%;
-    margin-top: 11px;
-    transition: 0.5s all ease;
-   }
-   .topcnachoverdesc .items a{
- 
-    color: black;
-    transition: 0.3s all ease;
-
-   }
-   .topcnachoverdesc .items a:hover ~.hrline{
- 
-    width: 100%;
+ .topcnachoverdesc .items{
+  font-family: 'Poppins', sans-serif;
+  padding: 1rem;
+  color: black;
+  font-size: 15px;
   
 
-   }
-   .topcnachoverdesc .items a:hover{
- 
-    color: rgb(50, 50, 50);
-    font-size: 18px;
-  
+ }
+ .topcnachoverdesc .hrline{
+  border-bottom: 1px solid #bababa;
+  width: 44%;
+  margin-top: 11px;
+  transition: 0.5s all ease;
+ }
+ .topcnachoverdesc .items a{
 
-   }
-     .topnavitem .topcnachoverdesc .pic{
+  color: black;
+  transition: 0.3s all ease;
 
-    height: inherit;
-    width: 50%;
-    background-color: #9c9c9c;
-    }
+ }
+ .topcnachoverdesc .items a:hover ~.hrline{
+
+  width: 100%;
+
+
+ }
+ .topcnachoverdesc .items a:hover{
+
+  color: rgb(50, 50, 50);
+  font-size: 18px;
+
+
+ }
+   .topnavitem .topcnachoverdesc .pic{
+
+  height: inherit;
+  width: 50%;
+  background-color: #9c9c9c;
+  }
 
 
 
@@ -120,198 +113,147 @@ color: black;
 
 
 .navbar{
-  position: fixed;
-  top:0;
-  left:0;
+  position: absolute;
+  top: 67px;
+  left: 91px;
   background-color: #000000e7;
-  height: 100vh;
+ 
   width: 100%;
   z-index: 10;
-  display: none;
+  display: block;
   overflow-y: scroll;
-  
+
 /*  animation: fadein 1s ease-in;*/
 }
 @keyframes fadein {
-  0%{opacity:0;}
-  100%{opacity:1;}
+0%{opacity:0;}
+100%{opacity:1;}
 }
 .hidden{
- display: flex;
- animation: gotoleft 0.5s forwards;
- transform:translateX(0)
+display: flex;
+animation: gotoleft 0.5s forwards;
+transform:translateX(0)
 }
 
- 
+
 @keyframes gotoleft{
 
-  0%{
-    transform:translateX(0)
-  }
-  100%{
+0%{
+  transform:translateX(0)
+}
+100%{
 
-    transform:translateX(-100%)
-  }
+  transform:translateX(-200%)
+}
 }
 .show{
-  display: flex;
-  animation: fromleft 0.5s forwards;
-  transform:translateX(-100%)
- }
+display: flex;
+animation: fromleft 0.5s forwards;
+transform:translateX(-100%)
+}
 @keyframes fromleft{
 
-  0%{
-    transform:translateX(-100%)
-  }
-  100%{
+0%{
+  transform:translateX(-100%)
+}
+100%{
 
-    transform:translateX(0)
-  }
+  transform:translateX(0)
+}
 }
 .navbarAlign{
 margin: auto;
 
 }
 .left_side_after_poster .fa{
-  font-size: 30px;
-  color: white;
-  margin-top: 30px;
-  cursor: pointer;
+font-size: 30px;
+color: white;
+margin-top: 30px;
+cursor: pointer;
 
 }
 .left_side_after_poster .fa:hover{
-  color: grey;
-  cursor: pointer;
+color: grey;
+cursor: pointer;
 }
 .navitem{
-  color: white;
-  margin-bottom: 7px;
-  font-size: 18px;
-  font-weight: 700;
-  position: relative;
-  margin-left: 2rem;
- ;
- }
- .mobile_navitem_flexbox{
+color: white;
+margin-bottom: 7px;
+font-size: 18px;
+font-weight: 700;
+position: relative;
+margin-left: 2rem;
+;
+}
+.mobile_navitem_flexbox{
 
-  display: flex;
- }
- .mobile_navitem_flexbox .arrow{
-  height: 0;
-  width: 0;
-  border: solid black;
-  border-top-width: medium;
-  border-right-width: medium;
-  border-bottom-width: medium;
-  border-left-width: medium;
-  border-width: 0 3px 3px 0;
-  display: inline-block;
-  padding: 3px;
-  transform: rotate(135deg);
-  top: 9px;
-  margin-left: auto;
-  position: relative;
- }
+display: flex;
+}
+.mobile_navitem_flexbox .arrow{
+height: 0;
+width: 0;
+border: solid black;
+border-top-width: medium;
+border-right-width: medium;
+border-bottom-width: medium;
+border-left-width: medium;
+border-width: 0 3px 3px 0;
+display: inline-block;
+padding: 3px;
+transform: rotate(135deg);
+top: 9px;
+margin-left: auto;
+position: relative;
+}
 
 .section_end_hr{
 
-  border-bottom: 1px solid grey;
- }
- .navitem a:hover,label:hover{
+border-bottom: 1px solid grey;
+}
+.navitem a:hover,label:hover{
 
-  color: rgb(194, 194, 194);
-  cursor: pointer;
- 
- }
- input[type=checkbox]:checked ~ .maobilenavmain {
-  display: block;
-  transition: all 0.5s ease-in-out;
-  height: auto;
-  margin: 1rem;
+color: rgb(194, 194, 194);
+cursor: pointer;
+
+}
+input[type=checkbox]:checked ~ .maobilenavmain {
+display: block;
+transition: all 0.5s ease-in-out;
+height: auto;
+margin: 1rem;
 }
 @keyframes increaseheight{
 
-  0%{
-    height: 0px;
-  }
-  100%{
-    height: 100px;
+0%{
+  height: 0px;
+}
+100%{
+  height: 100px;
 
-  }
 }
- .maobilenavmain {
-  display: none;
-  height: 0;
-  transition: all 0.5s ease-in-out;
 }
+
 label{
 
-  position: relative;
+position: relative;
 }
 input[type=checkbox]:checked ~ label:before {
-  transform: rotate(45deg);
-  -webkit-transform: rotate(45deg);
+transform: rotate(45deg);
+-webkit-transform: rotate(45deg);
 
-  
+
 }
 input[type=checkbox]:checked ~ label {
-  margin-top: 1rem;
+margin-top: 1rem;
 }
 
 
 input[type=checkbox]{
-  margin: 0px;
-  padding: 0px;
- display: none;
+margin: 0px;
+padding: 0px;
+display: none;
 }
-.maobilenavmain{
-  
-  display: none;
-}
-.navitem_subsection{
-  color: white;
-  font-size: 18px;
-  font-weight: 700;
-  margin: 0.5rem;
-  
 
-}
-.navitem_subsection a:link, a:visited , a:active{
-  color: white;
-
-}
-.navbarAlign .close {
-  position: relative;
-
-  width: 32px;
-  height: 32px;
-  opacity: 0.8;
-}
-.navbarAlign .close:hover {
-  opacity: 1;
-}
-.navbarAlign .close:before, .close:after {
-  position: absolute;
-  left: 9px;
-  content: ' ';
-  height: 20px;
-  width: 3px;
-  background-color: #fff;
-  top: -19px;
-
-}
-.navbarAlign .hr{
-  border-bottom: 1px solid #d7d7d7;
-
-  margin-bottom: 29px;
-  margin-left: 34px;
-}
-.navbarAlign .close:before {
-  transform: rotate(45deg);
-}
-.navbarAlign .close:after {
-  transform: rotate(-45deg);
-}
 
 
 
@@ -322,126 +264,126 @@ input[type=checkbox]{
 
 @keyframes loop1{
 
-    0%{
+  0%{
 
-        background-position: -60px;
-    }
-    
-    50%{
+      background-position: -60px;
+  }
+  
+  50%{
 
-        background-position: 0px;
-    }
+      background-position: 0px;
+  }
 
 
 100%{
 
-    background-position: -60px;     
+  background-position: -60px;     
 }
 }
 .rightside{
-    background-color: transparent;
-    width: 100%;
+  background-color: #000;
+  width: 100%;
 }
 form{
-    margin: 2rem;
-    margin-right: 2rem;
-    margin-bottom: 2rem;
-    margin-left: 2rem;
-    margin-left: auto;
-    margin-right: auto;
-    display: grid;
-    width: 100%;
-    margin-bottom: 0;
+  margin: 2rem;
+  margin-right: 2rem;
+  margin-bottom: 2rem;
+  margin-left: 2rem;
+  margin-left: auto;
+  margin-right: auto;
+  display: grid;
+  width: 100%;
+  margin-bottom: 0;
 }
 .getoffercontainer input,textarea{
-    outline: 0;
-    border-radius: 7px;
-    border: 0px;
-    padding: 1rem;
-    margin-top: 10px;
-    background-color: #b9b9b9db;
-    border: 1px solid #515151;
-    color: #000000e3;
-    width: auto;
-    transition: 0.5s all;
-    mix-blend-mode: lighten;
-
+  outline: 0;
+  border-radius: 7px;
+  border: 0px;
+  padding: 1rem;
+  margin-top: 10px;
+  background-color: #b9b9b9db;
+  border: 1px solid #515151;
+  color: #000000e3;
+  width: auto;
+  transition: 0.5s all;
   
+
+
 }
 
 .getoffercontainer textarea{
 
-    outline: 0;
-    border-radius: 7px;
-    border: 0px;
-    padding: 1rem;
-    margin-top: 10px;
-    
-    border: 1px solid #515151;
-    color: #fff;
-    width: auto;
-    transition: 0.5s all;
-   
-    background-color: #000000db;
+  outline: 0;
+  border-radius: 7px;
+  border: 0px;
+  padding: 1rem;
+  margin-top: 10px;
   
+  border: 1px solid #515151;
+  color: #fff;
+  width: auto;
+  transition: 0.5s all;
+ 
+  background-color: #000000db;
+
 }
 input:focus,textarea:focus{
-    background-color: black;
+  background-color: black;
 
-    margin-top: 30px;
-    mix-blend-mode: normal;
-    color: white;
+  margin-top: 30px;
+  mix-blend-mode: normal;
+  color: white;
 }
 
 .bestdeal{
-    font-weight: 700;
-    text-align: left;
-    color: #ffffffc9;
-    transition: 1s ease all;
-    font-size: 34px;
-    line-height: 1;
-    padding-top: 70px;
+  font-weight: 700;
+  text-align: left;
+  color: #ffffffc9;
+  transition: 1s ease all;
+  font-size: 34px;
+  line-height: 1;
+  padding-top: 70px;
 }
 .getoffercontainer button{
-    padding: 1rem;
-    width: 217px;
-    border-radius: 6px;
-    margin-top: 30px;
-    background-color: #000000c9;
-    height: 52.5px;
-    font-size: 16px;
-    display: block;
-    border: 1px solid #8f8f8f;
-    color: white;
-    text-align: center;
+  padding: 1rem;
+  width: 217px;
+  border-radius: 6px;
+  margin-top: 30px;
+  background-color: #000000c9;
+  height: 52.5px;
+  font-size: 16px;
+  display: block;
+  border: 1px solid #8f8f8f;
+  color: white;
+  text-align: center;
 }
 button:hover{
-    background-color: white;
-    color: #000000c9;
-    cursor: pointer;
+  background-color: white;
+  color: #000000c9;
+  cursor: pointer;
 }
 .left_side_after_poster{
-    margin-left: 100px;
- 
+  margin-left: 100px;
+
 }
 
 .logo_container{
-    justify-self: center;
-    min-width: 0;
-    padding: 0;
-    align-self: center;
-    grid-area: media;
-    margin-right: 50px;
+  justify-self: center;
+  min-width: 0;
+  padding: 0;
+  align-self: center;
+  grid-area: media;
+  margin-right: 50px;
 }
 .logo_container img{
-    width: 310px;
-    max-width: 100%;
+  width: 310px;
+  max-width: 100%;
 }
 .logo_container2{
-    display: none;
+  display: none;
 }
 button.backbtn {
-  position: absolute;
+position: absolute;
 top: 69px;
 text-decoration: none;
 width: -moz-fit-content;
@@ -451,118 +393,88 @@ border-radius: 4px;
 background-color: #fff;
 color: #000;
 left: 96px;
-  }
-  button.backbtn:hover{
-    background-color: #62000041;
+}
+button.backbtn:hover{
+  background-color: #62000041;
 
-  }
-  .Deal_txt{
-    -webkit-text-stroke: 1px white;
-    -webkit-text-fill-color: white;
-    font-size: 200px;
+}
+.Deal_txt{
+  -webkit-text-stroke: 1px white;
+  -webkit-text-fill-color: white;
+  font-size: 200px;
 mix-blend-mode: soft-light;
 
 }
 .Best_txt{
-    -webkit-text-stroke: 1px white;
-    -webkit-text-fill-color: #6f161600;
-    font-size: 50px;
+  -webkit-text-stroke: 1px white;
+  -webkit-text-fill-color: #6f161600;
+  font-size: 50px;
 
 }
 .confirmationcontainer{
 z-index: 10;
-    position: absolute;
-    top:50%;
-    left: 25%;
-    width: 40%;
-    height: 350px;
-    padding: 2rem;
-    background-color: #000000;
+  position: absolute;
+  top:50%;
+  left: 25%;
+  width: 40%;
+  height: 350px;
+  padding: 2rem;
+  background-color: #000000;
 }
 .error{
-    color: #9f0000;
-    margin-top: 3px;
+  color: #9f0000;
+  margin-top: 3px;
 }
 
 
-.navbar{
-  color: black;
-   background-color: white;
-   width: 30%;
-   font-weight: 300;
-   }
-   .navbar label{
-     color: black;
-      background-color: white;
-      width: 100%;
-      font-weight: 300;
-      }
-   .navitem a:link, a:visited, a:active {
-     color: rgb(31, 31, 31);
-     font-weight: 300;
-   }
-   
-   .navbar .navitem_subsection a{
-     color: rgb(27, 27, 27);
-     font-weight: 300;
-   }
 
-   .navbarAlign .close::before, .close::after {
-
-     background-color: #000;
-
-   }
-   .navbarAlign{
-
-     width: 100%;
-       margin: 2rem;
-       margin-top: 5rem;
-       margin-left: 0;
-   }
 @media only screen and (max-width:800px) {
- 
-  .navbar{
- 
-     width: 70%;
-  
-     }
+.navitemsholder{
 
-  .left_side_after_poster .fa {
-    font-size: 30px;
-    color: white;
-    margin-top: 7px;
-    cursor: pointer;
-    position: absolute;
-    top: 50px;
-    left: 30px;
-    background-color: #3e3e3e;
-padding: 0.5rem;
+  display: none;
+}
+.navbar{
+
+   width: 70%;
+
+   }
+
+.left_side_after_poster .fa {
+  font-size: 30px;
+  color: white;
+  margin-top: 7px;
+  cursor: pointer;
+  position: absolute;
+  top: 50px;
+  left: 30px;
+  background-color: #3e3e3e;
+  padding: 0.5rem;
 border-radius: 10px;
 
-  }
+}
 
-  .topnavitem{
+.topnavitem{
 
-    display: none;
-  }
-    .logo_container{
-        margin-right: auto;
-        width: 376px;
-        margin-left: auto;
-        height: 284px;
-   }
-    button.backbtn {
-        position: absolute;
-        top: 0;
-        text-decoration: none;
-        width: fit-content;
-        padding: 1rem;
-        border-radius: 15px;
-        background-color: #d3232361;
-        color: #fff;
-      }
-    .poster {
-        display: block;
+  display: none;
+}
+  .logo_container{
+      margin-right: auto;
+      width: 376px;
+      margin-left: auto;
+      height: 284px;
+ }
+  button.backbtn {
+      position: absolute;
+      top: 0;
+      text-decoration: none;
+      width: fit-content;
+      padding: 1rem;
+      border-radius: 15px;
+      background-color: #d3232361;
+      color: #fff;
+    }
+  .poster {
+      display: block;
 margin-left: auto;
 margin-right: auto;
 padding-top: 120px;
@@ -571,87 +483,87 @@ background-repeat: no-repeat;
 animation: none;
 height: 666px;
 background-blend-mode: color-dodge;
-    }
-    .logo_container2{
-      
-        margin-right: auto;
-        display: flex;
-      
-        margin-left: auto;
-        position: relative;
-        top: -60px;
-   }
-   .logo_container2 img{
-    width: 170px;
-    margin-left: auto;
-    margin-right: auto;
+  }
+  .logo_container2{
+    
+      margin-right: auto;
+      display: flex;
+    
+      margin-left: auto;
+      position: relative;
+      top: -60px;
+ }
+ .logo_container2 img{
+  width: 170px;
+  margin-left: auto;
+  margin-right: auto;
 
-    border-radius: 20px;
+  border-radius: 20px;
 
-    padding: 1rem;
+  padding: 1rem;
 
 }
 
-    .getoffercontainer input,textarea{
-        width: auto;
-        margin-left: 0px;
-        margin-right: 0px;
-        mix-blend-mode:normal;
-        border: 1px solid #515151;
+  .getoffercontainer input,textarea{
+      width: auto;
+      margin-left: 0px;
+      margin-right: 0px;
+      mix-blend-mode:normal;
+      border: 1px solid #515151;
 color: white;
 width: auto;
 transition: 0.5s all;
 background-color: #000000db;
-   }
-   .getoffercontainer input:focus,textarea:focus{
-    color: white;
-    mix-blend-mode: normal;
+ }
+ .getoffercontainer input:focus,textarea:focus{
+  color: white;
+  mix-blend-mode: normal;
 }
-    .getoffercontainer {
-        padding: 1rem;
-        margin-top: 0;
-        position: relative;
-        top: -25px;
-   }
-    .bestdeal{
-        padding-top: 0px;
-        font-size: 26px;
-        text-align: center;
-        line-height: 0;
-        position: relative;
-        top: -50px;
-        margin-top: 20px;
-        color: #a00;
-   }
-    .logo_container{
-        display: none;
-   }
-    .left_side_after_poster {
-        margin-left: 21px;
-      
-        margin-right: 11px;
-  
-        margin-top: 0px;
-        
-        border-radius: 11px;
-        height: 500px;
-        
-   }
-    button{
-        width: 100%;
-   }
-   .Best_txt {
-    -webkit-text-stroke: 1px #9c9c9c;
-    -webkit-text-fill-color: #fff;
-    font-size: 29px;
-  }
-  .Deal_txt {
-    -webkit-text-stroke: 1px black;
-    -webkit-text-fill-color: white;
-    font-size: 32px;
-    mix-blend-mode: exclusion;
-  }
+  .getoffercontainer {
+      padding: 1rem;
+      margin-top: 0;
+      position: relative;
+      top: -25px;
+ }
+  .bestdeal{
+      padding-top: 0px;
+      font-size: 26px;
+      text-align: center;
+      line-height: 0;
+      position: relative;
+      top: -50px;
+      margin-top: 20px;
+      color: #a00;
+ }
+  .logo_container{
+      display: none;
+ }
   .left_side_after_poster {
-    mix-blend-mode: normal;
-  }
+      margin-left: 21px;
+    
+      margin-right: 11px;
+
+      margin-top: 0px;
+      
+      border-radius: 11px;
+      height: 500px;
+      
+ }
+  button{
+      width: 100%;
+ }
+ .Best_txt {
+  -webkit-text-stroke: 1px #9c9c9c;
+  -webkit-text-fill-color: #fff;
+  font-size: 29px;
+}
+.Deal_txt {
+  -webkit-text-stroke: 1px black;
+  -webkit-text-fill-color: white;
+  font-size: 32px;
+  mix-blend-mode: exclusion;
+}
+.left_side_after_poster {
+  mix-blend-mode: normal;
+}
 }
