--- a/src/components/aboutus/Aboutus.css
+++ b/src/components/aboutus/Aboutus.css
@@ -7,29 +7,21 @@ body{
 }
 .aboutuscontainer{
     padding: 1rem;
-    margin-top: 100px;
     border-radius: 20px;
     margin-right: 95px;
     margin-left: 89px;
     position: relative;
     color: #543838;
-    mix-blend-mode: exclusion;
     border: 1px solid black;
    transition: 0.5s all ease;
    rotate: 0deg;
    transform: scale(1);
 }
-.aboutuscontainer:hover{
-    margin-top: 120px;
-    margin-bottom: 120px;
-    rotate: -1deg;
-    transform: scale(1.05);
-}
 
 .aboutuscontainer::before{
     position: absolute;
     content: '';
-    top: -17px;
+    top: -1px;
     height: 199%;
     width: 200%;
     z-index: -1;
@@ -38,8 +30,8 @@ body{
     opacity: 1;
     background-position: 27px;
     animation: loop 3s infinite;
-    background-color: #f2caca;
-  
+    background-color: #000;
+
 }
 
 @keyframes loop{
@@ -62,19 +54,17 @@ body{
 }
 
 
-
 .aboutuscontainer h1{
     font-size: 72px;
-    color: #282828;
-    font-family: 'Roboto', sans-serif;
+    color: white;
     font-weight: 530;
     font-size: 68px;
     margin-top: 11px;
     margin-left: 11px;
     font-family: 'Poppins', sans-serif;
-    mix-blend-mode: darken;
     text-align: center;
     transition: 0.5s all ease;
+    margin-bottom: 53px;
 }
 
 .aboutuscontainer .desc{
@@ -88,7 +78,7 @@ body{
     line-height: 1.5;
     margin-bottom: 0.8rem;
 
-    color: #000;
+    color: white;
     transition: 0.5s all ease;
  }
  @media only screen and (max-width:800px) {
