--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,14 +1,13 @@
 footer {
-    background-color: #121315;
-    color: #a7a7a7;
-    font-size: 16px;
-  }
-  footer  {
-    font-family: "Poppins", sans-serif;
-    box-sizing: border-box;
-    border: none;
-    outline: none;
-  }
+  font-family: "Poppins", sans-serif;
+  box-sizing: border-box;
+  border: 1px solid #3c3c3c;
+  outline: none;
+  background-color: #0f0f0f;
+color: #a7a7a7;
+font-size: 16px;
+}
+  
   .row {
     padding: 1em 1em;
   }
