--- a/src/components/Rightside/navbar.css
+++ b/src/components/Rightside/navbar.css
@@ -7,10 +7,65 @@
 backdrop-filter: saturate(180%) blur(20px);
 padding-bottom: 17px;
 padding-top: 17px;
-background: black;
 
     
 }
+.navbar{
+  color: black;
+   background-color: white;
+   width: 30%;
+   font-weight: 300;
+   position: absolute;
+   top: 90px;
+   left: -465px;
+   background-color: #0b0b0bd6;
+   display: flex;
+   z-index: 2;
+   overflow-y: auto;
+   transition: 0.5s all;
+   mix-blend-mode: unset;
+   border: 1px solid #4a4a4a;
+   background-blend-mode: luminosity;
+   backdrop-filter: blur(3px);
+}
+   
+   @keyframes fadein {
+    0%{opacity:0;}
+    100%{opacity:1;}
+    }
+    .hidden{
+    display: flex;
+    animation: gotoleft 0.5s forwards;
+    transform:translateX(0)
+    }
+    
+    
+    @keyframes gotoleft{
+    
+    0%{
+      transform:translateX(0)
+    }
+    100%{
+    
+      transform:translateX(-200%)
+    }
+    }
+    .show{
+    
+    animation: fromleft 0.5s forwards;
+    left: 107px;
+    transition: 0.5s all ;
+    }
+    @keyframes fromleft{
+    
+    0%{
+      transform:translateX(-100%)
+    }
+    100%{
+    
+      transform:translateX(0)
+    }
+    }
 .menubar{
 
   
@@ -22,6 +77,14 @@ background: black;
     height: 5px;
     background-color: white;
     margin: 6px 0;
+}
+.menubar:hover{
+
+  cursor: pointer;
+}
+.menubar:hover .bar{
+  background-color:rgb(62, 62, 62);
+ 
 }
 .navitemsholder .item{
     margin: auto;
@@ -60,12 +123,20 @@ background: black;
     padding-top: 10px;
 
 }
-.navitem_subsection a {
-    color: black;
-}
-.navitem_subsection a:hover {
-    color:rgb(36, 36, 36);
-}
+.navitem a:hover,label:hover{
+
+  color: rgb(96, 96, 96);
+  cursor: pointer;
+  
+  }
+  .navitem label:hover{
+
+    color: rgb(96, 96, 96);
+    cursor: pointer;
+    
+    }
+
+
 .navitem_subsection{
     padding: 0.5rem;
     background: rgba(255, 255, 255, 0.8);
@@ -101,7 +172,7 @@ z-index: 1;
     padding-top: 87px;
     color: white;
     border: 1px solid #2b2b2b;
-    padding-bottom: 48px;
+    padding-bottom: 12px;
 
 }
 .product_name{
@@ -110,10 +181,16 @@ z-index: 1;
     margin-left: 21px;
     color: #000;
     padding: 0.4rem;
-    width: fit-content;
+    
     padding-left: 0.8rem;
     padding-right: 0.8rem;
-    border-radius: 85px;
+    border-radius: 20px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: black;
+    color: white;
+    margin-top: 10px;
 }
 
 .rightside h1{
@@ -135,28 +212,60 @@ font-size: 48px;
     margin: auto;
     font-weight: 700;
     margin-bottom: 17px;
+ 
   
 }.rightside button{
-    margin-left: 30px;
+    margin-left: 0px;
 margin-right: auto;
 padding: 0.5rem;
   padding-right: 0.5rem;
   padding-left: 0.5rem;
-margin-top: 6px;
+margin-top: 20px;
 background-color: #830000;
 border: 0;
-border-radius: 7px;
+border-radius: 20px;
 padding-left: 20px;
 padding-right: 20px;
 color: #fff;
-  
+width: 100%;
 }
-.navbar{
-    color: black;
-     background-color: white;
-     width: 30%;
-     font-weight: 300;
-     }
+.product_name ul{
+
+  padding: 0;
+  margin: 0;
+}
+.product_name ul li{
+  margin: 0;
+  margin-left: 30px;
+  font-size: 14px;
+text-align: center;
+margin-right: auto;
+background: white;
+border-radius: 12px;
+color: black;
+
+padding: 0.5rem;
+margin-bottom: 10px;
+display: flex;
+margin-left: auto;
+text-align: center
+}
+.product_name ul li:first-child{
+   margin-top: 15px;
+}
+.product_name ul .topic{
+  font-size: 17px;
+  font-weight: 400;
+  margin-top: 15px;
+  margin-bottom: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.product_name ul li::marker{
+  content: "";
+}
+    /*  animation: fadein 1s ease-in;*/
+   
 input[type=checkbox]:checked ~ .nav_mobile_subsection{
 
     display: block;
@@ -165,23 +274,45 @@ input[type=checkbox]:checked ~ .nav_mobile_subsection{
 
     
     display: none;
-    color: black;
+    color: inherit;
     font-size: 17px;
     padding: 1rem;
     font-weight: 500;
 }   
      .navbar label{
-       color: black;
-        background-color: white;
+       color: inherit;
+        
         width: 100%;
         font-weight: 300;
         padding-right: 43px;
         }
-     .navitem a:link, a:visited, a:active {
-       color: rgb(31, 31, 31);
+ 
+     .navitem a{
+      color:rgb(146, 146, 146);
        font-weight: 300;
      }
-     
+     .navitem a:active{
+      color:rgb(146, 146, 146);
+       font-weight: 300;
+     }
+     .navitem_subsection a {
+      color: black;
+  }
+  .navitem_subsection a:hover{
+    color: rgb(57, 57, 57);
+}
+     .navitem{
+      color:rgb(146, 146, 146);
+      margin-bottom: 7px;
+      font-size: 18px;
+      font-weight: 700;
+      position: relative;
+      margin-left: 2rem;
+      }
+      .navitem a{
+        color:inherit;
+  
+        }
      .navbar .navitem_subsection a{
        color: rgb(27, 27, 27);
        font-weight: 300;
@@ -211,14 +342,24 @@ input[type=checkbox]:checked ~ .nav_mobile_subsection{
        }
        .navbar {
 
-        left: 0;
-      
-        width: fit-content;
-        width: auto;
-        margin: 1rem;
+       
+
+        left: -422px;
+        
+          width: fit-content;
+          width: auto;
+          margin: 1rem;
+  
+  
+         
 
 
        }
+       .show {
+        animation: fromleft 0.5s forwards;
+left: 16px;
+transition: 0.5s all;
+      }
        .rightside h1 {
 
         font-size: 46px;
