--- a/src/components/Rightside/maincontent.css
+++ b/src/components/Rightside/maincontent.css
@@ -233,6 +233,10 @@ z-index: 0;
 
 transition: 0.3s all ease-in-out;
 }
+.fa-close:hover{
+
+  cursor: pointer;
+}
 .product_display_holder img{
 
   margin-left: auto;
