--- a/src/components/Rightside/navbar.css
+++ b/src/components/Rightside/navbar.css
@@ -155,6 +155,7 @@ backdrop-filter: saturate(180%) blur(20px);
 .imgbanner .product_display_holder{
 margin: auto;
 z-index: 1;
+
 }
 .products_holder{
     width: auto;
@@ -173,6 +174,7 @@ z-index: 1;
     color: white;
     border: 1px solid #2b2b2b;
     padding-bottom: 12px;
+    
 
 }
 .product_name{
@@ -257,9 +259,10 @@ text-align: center
   font-size: 17px;
   font-weight: 400;
   margin-top: 15px;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
   padding-left: 20px;
   padding-right: 20px;
+  max-width: 238px;
 }
 .product_name ul li::marker{
   content: "";
