--- a/src/components/Rightside/maincontent.css
+++ b/src/components/Rightside/maincontent.css
@@ -412,6 +412,25 @@ z-index: 10;
 
 
 @media only screen and (max-width:800px) {
+
+  .rightside::before{
+
+    position: absolute;
+    content: '';
+    background: linear-gradient(to bottom, rgba(157, 24, 24, 0) 20%, rgba(0, 0, 0, 0)), url('../imgs/handShake.jpg');
+    top: 5px;
+    height: 59%;
+    width: 100%;
+    z-index: -1;
+    left: 0;
+    background-size: cover;
+    filter: blur(30px);
+    opacity: 0.5;
+    background-position: 27px;
+    animation: none;
+    background-blend-mode: saturation;
+    
+    }
 .navitemsholder{
 
   display: none;
