--- a/src/components/Rightside/navbar.css
+++ b/src/components/Rightside/navbar.css
@@ -25,7 +25,9 @@ padding-top: 17px;
    transition: 0.5s all;
 
    border: 1px solid #4a4a4a;
-
+   left: -100%;
+   -webkit-backdrop-filter: blur(3px);
+   backdrop-filter: blur(3px);
 
 }
    
@@ -136,7 +138,7 @@ padding-top: 17px;
     
     }
 
-
+  
 .navitem_subsection{
     padding: 0.5rem;
     background: rgba(255, 255, 255, 0.8);
@@ -158,25 +160,45 @@ z-index: 1;
 
 }
 .products_holder{
-    width: auto;
-    padding: 1rem;
-      padding-top: 1rem;
-      padding-bottom: 1rem;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    background-color: rgb(235, 235, 235);
-    position: relative;
-    top: -68px;
-    z-index: -1;
-   
-    border-radius: 27px;
-    padding-top: 87px;
-    color: white;
-    border: 1px solid #2b2b2b;
-    padding-bottom: 12px;
-    
+  width: auto;
+  padding: 1rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  background-color: rgb(235, 235, 235);
+  position: relative;
+  top: -68px;
+  z-index: -1;
+  border-radius: 27px;
+  padding-top: 87px;
+  color: white;
+  border: 1px solid #2b2b2b;
+  padding-bottom: 12px;
+  transition: 0.4s all;
 
 }
+.products_holder:hover{
+background-color: rgb(158, 158, 158);
+}
+.product_display_holder .noimgstyle{
+
+  padding-top: 10px;
+  top: 0px;
+  }
+  .product_display_holder img{
+  
+     transition: 0.4s all;
+    }
+  .product_display_holder:hover img{
+  
+    transform: scale(1.1);
+    }
+    .product_display_holder:hover .products_holder{
+
+
+      transform: scale(1.1);
+      top: -15px;
+    }
+
 .product_name{
     font-size: 17px;
     margin-bottom: -3px;
