--- a/src/components/Rightside/maincontent.css
+++ b/src/components/Rightside/maincontent.css
@@ -232,6 +232,59 @@ z-index: 10;
 transition: 0.3s all ease-in-out;
 padding-top: 78px;
 }
+.rightside h1{
+  color: white;
+margin-top: 10px;
+font-weight: 700;
+font-size: 48px;
+}
+.rightside h2{
+  color: #fff;
+  font-size: 18px;
+  background-color: #930093;
+  width: fit-content;
+  padding: 0.5rem;
+  border-radius: 48px;
+  padding-left: 0.8rem;
+  padding-right: 0.8rem;
+  text-align: center;
+  margin: auto;
+  font-weight: 700;
+  margin-bottom: 17px;
+ 
+
+}.rightside button{
+  margin-left: 0px;
+margin-right: auto;
+padding: 0.5rem;
+padding-right: 0.5rem;
+padding-left: 0.5rem;
+margin-top: 20px;
+background-color: #830000;
+border: 0;
+border-radius: 20px;
+padding-left: 20px;
+padding-right: 20px;
+color: #fff;
+width: 100%;
+}
+.rightside img{
+  vertical-align: middle;
+margin-top: 40px;
+}
+
+.rightside .img_otherthanhome{
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  margin-top: 4px;
+  z-index: 5;
+  width: 90px;
+  
+}
+.rightside .h1_otherthanhome{
+  margin-top: 160px;
+}
 .fa-close:hover{
 
   cursor: pointer;
