--- a/src/components/Rightside/maincontent.css
+++ b/src/components/Rightside/maincontent.css
@@ -12,7 +12,23 @@
 }
 
 
+.navitem .linkbtn{
 
+  margin: 0;
+background-color: transparent;
+color: black;
+font-weight: 200;
+text-align: left;
+padding-left: 0;
+padding-bottom: 0;
+padding-top: 0;
+}
+.navitem .linkbtn:hover{
+
+  margin: 0;
+background-color: transparent;
+
+}
 
 /*top nav fixed*/
 .topfixednav{
@@ -278,7 +294,7 @@ margin-top: 40px;
   top: 10px;
   right: 15px;
   margin-top: 4px;
-  z-index: 5;
+  z-index: -1;
   width: 90px;
   
 }
